Fix button position on firefox (#13)

--- a/web/src/App.module.css
+++ b/web/src/App.module.css
@@ -1,7 +1,7 @@
 /* Styles by @sowg: https://codepen.io/sowg/pen/qBXexaZ */
 
 .greetings {
-  width: 260px;
+  width: 300px;
   margin: 0 auto;
 }
 
@@ -30,6 +30,7 @@
 }
 
 .button {
+  float: right;
   appearance: none;
   border: 0.2em solid #e91e63;
   background: hsl(0 0 0/0);
